Add onclick event to Sell Item button

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 </svg>
             </button>
         </div>
-        <button id="actionBtn" class="action-btn sell-btn">+ Sell Item</button>
+        <button id="actionBtn" class="action-btn sell-btn" onclick="openModal('itemModal')">+ Sell Item</button>
     </div>
 
     <div class="container">
