--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
         }
 
         .action-btn {
-            border: none;
-            padding: 8px 16px;
+            width: 40px;
+            height: 40px;
             border-radius: 6px;
-            font-size: 14px;
-            font-weight: 500;
+            border: none;
+            font-size: 26px;
+            font-weight: 600;
             cursor: pointer;
-            transition: background 0.2s;
+            background: #2B5AAC;
+            color: white;
+            transition: 0.25s;
         }
 
         .sell-btn {
@@ -348,20 +351,6 @@
 
         .job-submit:hover {
             background: #2ea043;
-        }
-
-        .setup-notice {
-            background: #1f6feb;
-            color: white;
-            padding: 12px 20px;
-            text-align: center;
-            font-size: 14px;
-        }
-
-        .setup-notice code {
-            background: rgba(255,255,255,0.2);
-            padding: 2px 6px;
-            border-radius: 3px;
         }
 
         /* Footer Styles */
