--- a/index.html
+++ b/index.html
@@ -78,16 +78,13 @@
         }
 
         .action-btn {
-            width: 40px;
-            height: 40px;
-            border-radius: 6px;
             border: none;
-            font-size: 26px;
-            font-weight: 600;
+            padding: 8px 16px;
+            border-radius: 6px;
+            font-size: 14px;
+            font-weight: 500;
             cursor: pointer;
-            background: #2B5AAC;
-            color: white;
-            transition: 0.25s;
+            transition: background 0.2s;
         }
 
         .sell-btn {
@@ -351,6 +348,20 @@
 
         .job-submit:hover {
             background: #2ea043;
+        }
+
+        .setup-notice {
+            background: #1f6feb;
+            color: white;
+            padding: 12px 20px;
+            text-align: center;
+            font-size: 14px;
+        }
+
+        .setup-notice code {
+            background: rgba(255,255,255,0.2);
+            padding: 2px 6px;
+            border-radius: 3px;
         }
 
         /* Footer Styles */
